fixes page overflow-x (closes #336)

--- a/app/components/App.css
+++ b/app/components/App.css
@@ -2,6 +2,7 @@
 body {
   font-family: "Overpass", sans-serif;
   letter-spacing: 0.5px;
+  overflow-x: hidden;
 }
 
 #app {
